# cave-diver

./: .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-08-cave-diver-design.md
examples/: coder.py  exhaust_test.py  hello.py
src/cave_diver/: __init__.py  agent.py  context.py  types.py
src/cave_diver/tools/: builtin.py  coder.py
